--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -2,12 +2,13 @@
     width: 80%;
     margin: auto;
     background-color: rgba(253, 253, 253, 1);
-    height: 80%;
+    height: 90%;
     max-width: 700px;
     box-shadow: 4px 5px 15px 2px rgba(199, 197, 197, 0.62);
-    overflow:hidden;
+    overflow: hidden;
     padding-bottom: 31px;
     display: flex;
+    max-height: 750px;
     flex-direction: column;
 }
 
