--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -9,12 +9,12 @@
     padding-bottom: 31px;
     display: flex;
     max-height: 750px;
-      min-height: 350px;
+    min-height: 350px;
     flex-direction: column;
 }
 
 h1 {
-       margin: 0px;
+    margin: 0px;
     padding: 20px;
     background-color: #827a7a;
     text-transform: uppercase;
@@ -23,13 +23,14 @@ h1 {
 
 body {
     background-color: rgba(236, 236, 220, 1);
-    font-size:20px;
+    font-size: 20px;
     color: rgba(5, 5, 23, 1);
     font-family: 'Roboto', sans-serif;
-        margin-top: 20px;
+    margin-top: 20px;
 }
+
 input[type="text"] {
-     font-size: 20px;
+    font-size: 20px;
     outline: none;
     border: 2px solid rgb(208, 208, 208);
     border-radius: 10px;
@@ -39,16 +40,19 @@ input[type="text"] {
     transition: border 0.3s;
     color: rgb(47, 45, 142);
 }
+
 input[type="text"]:focus {
     border: 2px solid #827a7a;
 }
 
- input[type="text"]::-webkit-input-placeholder {
+input[type="text"]::-webkit-input-placeholder {
     color: #ccc;
-   } 
-   input[type="text"]::-moz-placeholder {
+}
+
+input[type="text"]::-moz-placeholder {
     color: #ccc;
-   }
+}
+
 .answer-form {
     background-color: #f3f3f3;
     text-align: center;
@@ -61,7 +65,7 @@ input[type="text"]:focus {
 
 .answer-form__input {
     margin: 20px;
-       width: 88px;
+    width: 88px;
 }
 
 .result__el {
@@ -71,14 +75,15 @@ input[type="text"]:focus {
     margin: 20px;
     line-height: 42px;
 }
+
 .result {
     height: inherit;
     overflow: auto;
     /* flex-grow: 1; */
-    }
-  
-.result__cow, .result__bull {
+}
 
+.result__cow,
+.result__bull {
     width: 42px;
     display: inline-block;
     background-size: 80%;
@@ -89,12 +94,15 @@ input[type="text"]:focus {
     /* margin: auto; */
     background-repeat: no-repeat;
 }
-.result__cow{
+
+.result__cow {
     background-image: url("../img/cow.png");
 }
-.result__bull{
+
+.result__bull {
     background-image: url("../img/bull.png");
 }
+
 .result__el span {
     /* margin: 10px; */
     /* margin-right: 10px; */
@@ -105,8 +113,24 @@ span.result__num {
     /* line-height: 84px; */
     display: inline-block;
 }
-@media only screen  and (max-width:700px){
-.container {
-    width: 95%;
+
+@media only screen and (max-width:700px) {
+    .container {
+        width: 95%;
+    }
 }
+
+@media only screen and (max-width:400px) {
+    .container {
+        width: 95%;
+    }
+    h1 {
+        font-size: 25px;
+    }
+    .answer-form__input {
+        margin: 9px;
+    }
+    .answer-form__question {
+        margin: 7px;
+    }
 }
