--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -76,9 +76,57 @@ input[type="text"]::-moz-placeholder {
     line-height: 42px;
 }
 
+.rules {
+    margin: 20px;
+    line-height: 1.3;
+    color: #827a7a;
+    position: absolute;
+    z-index: 11;
+    /* right: 100%; */
+    transition: all 1s;
+    top: 0px;
+    pointer-events: none;
+    background-color: #fdfdfd;
+}
+
+.rules::after {
+    content: "Hide rules";
+    position: absolute;
+    width: 41px;
+    height: 51px;
+    display: block;
+    top: calc(50% - 26px);
+    background-color: #827a7a;
+    color: white;
+    border-top-left-radius: 100px;
+    font-size: 10px;
+    padding-top: 25px;
+    cursor: pointer;
+    padding-left: 5px;
+    border-bottom-left-radius: 100px;
+    /* visibility: hidden; */
+    right: 0;
+    transition: all 1s;
+    pointer-events: all;
+}
+
+.rules.rules-hide::after {
+    content: "Show rules";
+    visibility: visible;
+    right: -23px;
+    border-radius: 0px;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+
+.rules-hide {
+    transform: translatex(-100%);
+}
+
 .result {
     height: inherit;
     overflow: auto;
+    position: relative;
     /* flex-grow: 1; */
 }
 
