--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -77,7 +77,7 @@ input[type="text"]::-moz-placeholder {
 }
 
 .rules {
-    margin: 20px;
+    padding: 20px;
     line-height: 1.3;
     color: #827a7a;
     position: absolute;
@@ -86,6 +86,7 @@ input[type="text"]::-moz-placeholder {
     transition: all 1s;
     top: 0px;
     pointer-events: none;
+    box-shadow: 0px 3px 12px 2px rgba(132, 132, 132, 0.43);
     background-color: #fdfdfd;
 }
 
@@ -113,7 +114,7 @@ input[type="text"]::-moz-placeholder {
 .rules.rules-hide::after {
     content: "Show rules";
     visibility: visible;
-    right: -23px;
+    right: -44px;
     border-radius: 0px;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
