--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -29,7 +29,7 @@ body {
     margin-top: 20px;
 }
 
-input[type="text"] {
+input[type="number"] {
     font-size: 20px;
     outline: none;
     border: 2px solid rgb(208, 208, 208);
@@ -41,15 +41,20 @@ input[type="text"] {
     color: rgb(47, 45, 142);
 }
 
-input[type="text"]:focus {
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    opacity: 0;
+}
+
+input[type="number"]:focus {
     border: 2px solid #827a7a;
 }
 
-input[type="text"]::-webkit-input-placeholder {
+input[type="number"]::-webkit-input-placeholder {
     color: #ccc;
 }
 
-input[type="text"]::-moz-placeholder {
+input[type="number"]::-moz-placeholder {
     color: #ccc;
 }
 
