--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -41,6 +41,10 @@ input[type="number"] {
     color: rgb(47, 45, 142);
 }
 
+.answer-form__form {
+    display: inline-block;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     opacity: 0;
