--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -50,6 +50,28 @@ input[type=number]::-webkit-outer-spin-button {
     opacity: 0;
 }
 
+input[type="submit"] {
+    background-color: #827a7a;
+    border: 2px solid #827a7a;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 6px 13px;
+    color: #fdfdfd;
+    /* margin: 20px; */
+    height: 30px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: 0.3s all;
+    outline: none;
+}
+
+input[type="submit"]:hover {
+    background-color: #fdfdfd;
+    color: #827a7a;
+    /* border: 2px solid #827a7a; */
+}
+
 input[type="number"]:focus {
     border: 2px solid #827a7a;
 }
