--- a/CowsBulls/css/style.css
+++ b/CowsBulls/css/style.css
@@ -63,6 +63,7 @@ input[type="number"] {
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     opacity: 0;
+    -webkit-appearance: none;
 }
 
 input[type="submit"] {
